--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ Globals.pageSize=10
 # File Config
 Globals.posblAtchFileSize=5242880
 Globals.addedOptions=false
-#Globals.fileStorePath=./files
+Globals.fileStorePath=./files
 
 # MainPage Setting
 #Globals.MainPage = /cmm/main/mainPage.do
