--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,7 +64,7 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 #Logging 
 #file path\uc758 default \uac12\uc740 \ud504\ub85c\uc81d\ud2b8 root \uacbd\ub85c\uc774\ubbc0\ub85c \uc6d0\ud558\uc2dc\ub294 \uacbd\ub85c\ub85c \ubcc0\uacbd\ud558\uc5ec \uc0ac\uc6a9\ud558\uc2dc\uae30 \ubc14\ub78d\ub2c8\ub2e4.
-logging.root.level=DEBUG
+logging.root.level=INFO
 logging.file.name=adams_server
 logging.file.path=/app/logs/
 logging.rollingpolicy.maxFileSize=10MB
