--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,4 +11,4 @@ logging.rollingpolicy.maxHistory=30
 
 # File store Path
 Globals.fileStorePath=./files
-Globals.uploadPath=/app/upload/
+file.upload.path=/app/upload/
