--- a/src/main/resources/application-loc.properties
+++ b/src/main/resources/application-loc.properties
@@ -11,4 +11,4 @@ logging.rollingpolicy.maxHistory=2
 
 # File store Path
 Globals.fileStorePath=./files/
-Globals.uploadPath=C:\\eRSF\\upload\\
+file.upload.path=C:\\eRSF\\upload\\
