로그 설정 변경

--- a/src/main/resources/application-loc.properties
+++ b/src/main/resources/application-loc.properties
@@ -7,7 +7,8 @@ Globals.Url=jdbc:log4jdbc:sqlserver://58.230.205.94:50000;databasename=RDSDB;enc
 Globals.UserName=rdsdev1
 Globals.Password=InitPass1#
 
-logging.rollingpolicy.maxHistory=2
+#Logging 
+logging.config=classpath:logback-loc.xml
 
 # File store Path
 Globals.fileStorePath=./files/
