feat: first file page organized

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,3 +13,6 @@ logging.config=classpath:logback-prod.xml
 # File store Path
 Globals.fileStorePath=./files
 file.upload.path=/app/upload/
+
+# # Spring will serve the static files  
+# spring.resources.static-locations=classpath:/static/
