--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -83,3 +83,7 @@ spring.thymeleaf.mode=HTML
 logging.level.com.zaxxer.hikari.HikariDataSource=ERROR
 logging.level.jdbc.sqlonly=OFF
 logging.level.org.apache.commons.dbcp2.DelegatingResultSet=OFF
+
+# Spring will serve the static files  
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/static/
