--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,7 @@ Globals.fileUpload.Extensions.Images = .gif.jpg.jpeg.png
 Globals.fileUpload.Extensions = .gif.jpg.jpeg.png.xls.xlsx
 
 # Access-Control-Allow-Origin
-Globals.Allow.Origin = http://localhost:3000
+Globals.Allow.Origin = http://localhost:8080
 
 #\uc554\ud638\ud654\uc11c\ube44\uc2a4 \uc54c\uace0\ub9ac\uc998 \ud0a4
 #\uc8fc\uc758 : \ubc18\ub4dc\uc2dc \uae30\ubcf8\uac12 "egovframe"\uc744 \ub2e4\ub978\uac83\uc73c\ub85c \ubcc0\uacbd\ud558\uc5ec \uc0ac\uc6a9\ud558\uc2dc\uae30 \ubc14\ub78d\ub2c8\ub2e4.
@@ -86,4 +86,4 @@ logging.level.org.apache.commons.dbcp2.DelegatingResultSet=OFF
 
 # Spring will serve the static files  
 spring.mvc.static-path-pattern=/static/**
-spring.resources.static-locations=classpath:/static/
+spring.resources.static-locations=classpath:/templates/
