로컬 jdbc 연결 옵션 변경

--- a/pom.xml
+++ b/pom.xml
@@ -257,11 +257,12 @@
 			<classifier>jdk8</classifier>
 		</dependency>
 		
-		<!-- Microsoft SQL Server JDBC Driver -->
-        <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>
-        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+		<dependency>
+		    <groupId>com.microsoft.sqlserver</groupId>
+		    <artifactId>mssql-jdbc</artifactId>
+		    <version>12.8.1.jre11</version>
+		</dependency>
 
 		<!-- mysql driver -->
 		<!--
