--- a/src/main/resources/application-loc.properties
+++ b/src/main/resources/application-loc.properties
@@ -3,7 +3,7 @@ Globals.OsType=WINDOWS
 
 # Database connection information
 Globals.DriverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-Globals.Url=jdbc:log4jdbc:sqlserver://58.230.205.94:50000;databasename=RDSDB;encrypt=true;trustServerCertificate=true
+Globals.Url=jdbc:log4jdbc:sqlserver://58.230.205.94:50000;databasename=RDSDB;encrypt=false;trustServerCertificate=false
 Globals.UserName=rdsdev1
 Globals.Password=InitPass1#
 
