welcome page 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,4 +86,5 @@ logging.level.org.apache.commons.dbcp2.DelegatingResultSet=OFF
 
 # Spring will serve the static files  
 spring.mvc.static-path-pattern=/static/**
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.resources.static-locations=classpath:/templates/
