--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,8 +3,8 @@ Globals.OsType=LINUX
 
 # Database connection information
 Globals.DriverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-Globals.Url=jdbc:log4jdbc:sqlserver://58.230.205.94:50000;databasename=RDSDB;encrypt=true;trustServerCertificate=true
-Globals.UserName=rdsdev1
+Globals.Url=jdbc:log4jdbc:sqlserver://10.200.3.5:1433;databasename=RDSDB;encrypt=true;trustServerCertificate=true
+Globals.UserName=rdsops1
 Globals.Password=InitPass1#
 
 #Logging 
