add profiles and replace with @spring.profiles.active@

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,30 @@
 	<version>0.0.1</version>
 	<name>ADAMS</name>
 	
+	<profiles>
+		<profile>
+			<id>local</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<spring.profiles.active>local</spring.profiles.active>
+			</properties>
+		</profile>
+		<profile>
+			<id>dev</id>
+			<properties>
+				<spring.profiles.active>dev</spring.profiles.active>
+			</properties>
+		</profile>
+		<profile>
+			<id>prod</id>
+			<properties>
+				<spring.profiles.active>prod</spring.profiles.active>
+			</properties>
+		</profile>
+	</profiles>
+	
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
