--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=@spring.profiles.active@
 spring.config.use-legacy-processing=true
 #-----------------------------------------------------------------------
 #
