--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,6 +54,8 @@ Globals.crypto.algoritm = adams
 #\uc8fc\uc758 : \ubc18\ub4dc\uc2dc \uae30\ubcf8\uac12 "egovframe"\uc744 \ub2e4\ub978\uac83\uc73c\ub85c \ubcc0\uacbd\ud558\uc5ec \uc0ac\uc6a9\ud558\uc2dc\uae30 \ubc14\ub78d\ub2c8\ub2e4
 Globals.jwt.secret = adams
 
+Globals.sysadm.csno = 999
+
 #server.servlet.context-path=/sht_boot_web
 server.servlet.context-path=/
 server.port = 8080
